fixed code editore and added judge0 language api

--- a/src/components/Toolbar.module.css
+++ b/src/components/Toolbar.module.css
@@ -1,4 +1,4 @@
-.toolbar {
+/* .toolbar {
   display: flex;
   padding: 1em;
   gap: 6px;
@@ -46,4 +46,4 @@
   color: #1e293b;
   outline: none;
   margin-right: 0.5rem;
-}
+} */
